--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.4",
+    "prisma": "^6.11.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "colors": "^1.4.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
